--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
+    },
+    "dependencies": {
+        "swiper": "^9.2.0"
     }
 }
